--- a/.github/workflows/quarto-staticrypt-ghpages.yml
+++ b/.github/workflows/quarto-staticrypt-ghpages.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       PROTECTED_DIR: _site
-      PASSWORD: password
+      PASSWORD: "beacons2026"
       # PASSWORD: ${{ secrets.YOUR_SECRET }}
     steps:
       - name: Check PASSWORD variable
